Add task time tracking
